Add support for edit commands in OOPIFs.

Previously, edit commands from the browser were sent via
InputMsg_SetEditCommandsForNextKeyEvent to focused RenderWidgets, but
for OOPIFs the IPC was dropped since it was only handled in
RenderViews.  To fix this, this CL moves the IPC handling and
associated edit command bookkeeping to RenderWidget.

BUG=640706

Review-Url: https://codereview.chromium.org/2287803002
Cr-Commit-Position: refs/heads/master@{#418126}
(cherry picked from commit 5656749d827dc6af03caed97958bd1ff035d1e61)

Review URL: https://codereview.chromium.org/2349523002 .

Cr-Commit-Position: refs/branch-heads/2840@{#383}
Cr-Branched-From: 1ae106dbab4bddd85132d5b75c670794311f4c57-refs/heads/master@{#414607}